# rozelle

./: .gitignore  README.md  pyproject.toml
docs/: exercises.md
src/rozelle/: __init__.py  constraints.py  display.py  exercise.py  run.py  sandbox.py  scaffold.py  watcher.py
src/rozelle/sandbox_snippets/: 01_before_exercise_prerun.py.snippet  03_after_exercise_prerun.py.snippet  05_before_exercise_postrun.py.snippet  07_after_exercise_postrun.py.snippet  epilogue.py.snippet  interlude.py.snippet  preamble.py.snippet
src/rozelle/scaffold_templates/: example.toml
