[project]
name = "rozelle"
version = "0.1.4"
description = "A TUI-based Python code exercise runner."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.13"
dependencies = [
    "langchain-sandbox>=0.0.6",
    "micropip>=0.10.1",
    "pydantic>=2.11.7",
    "pyfzf>=0.3.1",
    "rich>=14.0.0",
    "watchdog>=6.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pyodide",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Typing :: Typed",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project.scripts]
rozelle = "rozelle:main"

[tool.ruff.lint]
ignore = ["E402"]

[[tool.mypy.overrides]]
module = "pyfzf.*"
follow_untyped_imports = true
